--- a/jenkins_config.yml
+++ b/jenkins_config.yml
@@ -40,53 +40,27 @@ jenkins:
       - "Overall/Administer:admin"
       - "Job/Discover:anonymous"
       - "Overall/Read:anonymous"
-  disableRememberMe: false
+  disableRememberMe: true
   labelString: "master"
   mode: EXCLUSIVE
   numExecutors: 0
+  remotingSecurity:
+    enabled: true
   securityRealm:
     local:
       allowsSignup: false
       enableCaptcha: false
-# credentials:
-#   system:
-#     domainCredentials:
-#     - credentials:
-#       - usernamePassword:
-#           id: "-global-domain-credential"
-#           password: "{AQAAABAAAAAQTCfYT3V4zzcg5njhA9wG7VeEiQmgQIHXxWrvKO7j0as=}"
-#           scope: GLOBAL
-#       - string:
-#           id: "-global-domain-secret"
-#           scope: GLOBAL
-#           secret: "{AQAAABAAAAAQB684oNLk4V8AMzzblKVN6DagJPEkQwLA7S5B45KEudo=}"
-#     - credentials:
-#       - usernamePassword:
-#           id: "-github-domain-credential"
-#           password: "{AQAAABAAAAAQ+0T8Tp/0MwpmWGhN0Imq6nQp1Qhr+1BC3Ov73Qa5zUQ=}"
-#           scope: GLOBAL
-#       - string:
-#           id: "-github-domain-secret"
-#           scope: GLOBAL
-#           secret: "{AQAAABAAAAAQLA791PVdoUXmltDpWuqKn7eFcAY7kPeK8/CjhpUoRzw=}"
-#       domain:
-#         name: "github.com"
-# security:
-#   remotingCLI:
-#     enabled: false
+credentials
+  system:
+    domainCredentials:
+      - credentials:
+          - usernamePassword:
+              scope: GLOBAL
+              id: "my-bitbucket-creds"
+              username: "some-user"
+              password: ${SomeUserPassword} #Load from Environment Variable
+              description: "Username/Password Credentials for BitBucket"
 unclassified:
-  globalLibraries:
-    libraries:
-    - defaultVersion: "master"
-      implicit: true
-      name: "jenkins-pipeline-libraries"
-      retriever:
-        modernSCM:
-          scm:
-            git:
-              credentialsId: "-github-domain-credential"
-              id: "e2eaf2fc-974c-4883-b0f6-20b32cf7dbe8"
-              remote: "https://github.com/example/project-737.git"
   simple-theme-plugin:
     elements:
     - cssUrl:
