--- a/jenkins_config.yml
+++ b/jenkins_config.yml
@@ -52,6 +52,7 @@ credentials:
   system:
     domainCredentials:
       - credentials:
+          - (( append ))
           - usernamePassword:
               scope: GLOBAL
               id: "my-bitbucket-creds"
